# Raspberry-Pi-Projects

ESC_Elyos/Research/: BLDC_Triangle.c
ESC_Elyos/SEM_INDY_2024/: BL_DRIVER.c  BL_DRIVER.h  CMakeLists.txt  README.md  settings.json
